reworked the nirvana.dir stuff - new build.xml for startup project